--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -10,12 +10,12 @@
 
     <body>
         
-        <h1>Odin Recipes</h1>
+        <h1>Mint Chicken</h1>
 
         <img src="/images/recipes_stock.jpg">
 
   
-        <a href="/recipes/mint_chicken.html">Mint Chicken</a>
+        <a href="/index.html">Home</a>
 
 
 
