finished-mint_chicken

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
         
         <h1>Odin Recipes</h1>
 
-        <img src="/images/recipes_stock.jpg">
+        
+        <!-- Recipes Stock Image in Home -->
+        <img src="/images/recipes_stock.jpg" width="400" height="300" >
 
-  
-        <a href="/recipes/mint_chicken.html">Mint Chicken</a>
+        <p>
+            <a href="/recipes/mint_chicken.html" >Mint Chicken</a>
+        </p>
+
 
 
 
