--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -11,14 +11,40 @@
     <body>
         
         <h1>Mint Chicken</h1>
+        <a href="/index.html">Home<br></a>
 
-        <img src="/images/recipes_stock.jpg">
+        <img src="/images/mint_chicken.png" width="300" height="300"  >
 
-  
-        <a href="/index.html">Home</a>
+        <!-- Small -->
+        <p>
+            A favorite family recipe that my Mom has made for hundreds of guests. <br>
+            Fresh lemon juice and mint leaves are a must! Serve over hot cooked white rice.
+        </p>
+
+        <!-- In the Ingredients we have an Unordered list -->
+        <h2>
+            Ingredients
+        </h2>
+
+        <ul>
+            <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+            <li>1 clove garlic, crushed</li>
+            <li>½ cup all-purpose flour</li>
+            <li>½ cup margarine</li>
+            <li>¼ cup fresh lemon juice</li>
+            <li>½ cup chopped fresh mint leaves</li>
+        </ul>
 
 
+        <!-- In the Directions we have an Ordered list -->
+        <h2>
+            Directions
+        </h2>
 
+        <ol>
+            <li>Step 1 <br> In a medium bowl, mix together the chicken pieces and garlic. <br> Toss with the flour just to coat, and shake off excess.<br> </li>
+            <li>Step 2 <br> Heat the margarine in a large skillet over medium-high heat.<br> Add the chicken pieces; cook and stir until browned. Add the mint leaves and lemon juice, cover<br> and steam for about 5 minutes, just until the chicken is cooked through. Do not<br> over cook the chicken or it will be tough. </li>
+        </ol>
 
 
     </body>
