--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
         
         <h1>Odin Recipes</h1>
 
-        
+        <p>
+            This is my personal blog for recipes from around the world! Enjoy!<br>
+
+        </p>
         <!-- Recipes Stock Image in Home -->
         <img src="/images/recipes_stock.jpg" width="400" height="300" >
 
         <p>
             <a href="/recipes/mint_chicken.html" >Mint Chicken</a>
+        </p>
+
+        <p>
+            <a href="/recipes/moroccan_harira.html" >Vegetarian Moroccan Harira</a>
         </p>
 
 
