--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -42,8 +42,8 @@
         </h2>
 
         <ol>
-            <li>Step 1 <br> In a medium bowl, mix together the chicken pieces and garlic. <br> Toss with the flour just to coat, and shake off excess.<br> </li>
-            <li>Step 2 <br> Heat the margarine in a large skillet over medium-high heat.<br> Add the chicken pieces; cook and stir until browned. Add the mint leaves and lemon juice, cover<br> and steam for about 5 minutes, just until the chicken is cooked through. Do not<br> over cook the chicken or it will be tough. </li>
+            <li> In a medium bowl, mix together the chicken pieces and garlic. <br> Toss with the flour just to coat, and shake off excess.<br> <br></li>
+            <li> Heat the margarine in a large skillet over medium-high heat.<br> Add the chicken pieces; cook and stir until browned. Add the mint leaves and lemon juice, cover<br> and steam for about 5 minutes, just until the chicken is cooked through. Do not<br> over cook the chicken or it will be tough. </li>
         </ol>
 
 
